<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.4">
  <DUT Name="T_BST_Node" Id="{1a72cc93-7cc3-4e5b-8a7f-9e8a51077861}">
    <Declaration><![CDATA[TYPE T_BST_Node : ST_BINARY_SEARCH_TREE_NODE; END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>